Inspection history and such New files added - [InspectionHistoryDao.java,InspectionHistoryService.java,InspectionHistoryServiceImpl.java,InspectionHistoryController.java,InspectionHistory.java] Files modified - [MasterInspectionsServiceImpl.java,cx2_published_dataModel.json,VendorServiceImpl.java,ProjectsService.java,MasterInspectionsController.java,ProjectsServiceImpl.java,MunicipalitiesController.java,ViewInspection.variables.json,ViewInspection.js,InspectionService.java,ViewInspection.html,Projects.java,FormTypesService.java,UsersController.java,InspectionOutcome.java,InspectionDesignServiceImpl.java,Municipalities.java,MunicipalitiesServiceImpl.java,InspectionDesignController.java,MasterInspectionsService.java,FormTypesServiceImpl.java,Vendor.java,VendorService.java,MasterInspections.java,InspectionDesignService.java,InspectionOutcomeServiceImpl.java,FormTypesController.java,FormTypes.java,VendorController.java,InspectionOutcomeController.java,UsersService.java,Users.java,InspectionOutcomeService.java,InspectionController.java,ProjectsController.java,UsersServiceImpl.java,MunicipalitiesService.java,InspectionDesign.java,db-connection-settings.json,pom.xml]

--- a/src/main/webapp/pages/ViewInspection/ViewInspection.html
+++ b/src/main/webapp/pages/ViewInspection/ViewInspection.html
@@ -103,6 +103,7 @@
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
+                            <wm-spinner show="false" name="spinnerUpdateOutcome" caption="Updating..." servicevariabletotrack="svSetInspectionOutcome"></wm-spinner>
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
@@ -226,7 +227,15 @@
                                     </wm-livegrid>
                                 </wm-tabpane>
                                 <wm-tabpane name="tabpaneMessages" title="MESSAGES"></wm-tabpane>
-                                <wm-tabpane name="tabpaneHistory" title="HISTORY"></wm-tabpane>
+                                <wm-tabpane name="tabpaneHistory" title="HISTORY">
+                                    <wm-grid title="" dataset="bind:Variables.lvInspectionHistory.dataSet" navigation="Classic" name="gridInspectionHistory">
+                                        <wm-grid-column binding="dateCreated" caption="Activity Date" type="datetime" generator="assigned" edit-widget-type="datetime" show="true" readonly="false"></wm-grid-column>
+                                        <wm-grid-column binding="users.fullName" caption="Performed By" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
+                                        <wm-grid-column binding="inspectionOutcomeByNewOutcomeId.outcome" caption="Previous Outcome" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionOutcome"></wm-grid-column>
+                                        <wm-grid-column binding="inspectionOutcomeByOldOutcomeId.outcome" caption="Current Outcome" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionOutcome"></wm-grid-column>
+                                        <wm-grid-column binding="comments" caption="Comments" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    </wm-grid>
+                                </wm-tabpane>
                                 <wm-tabpane name="tabpaneINTERNAL" title="INTERNAL" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee"></wm-tabpane>
                             </wm-tabs>
                         </wm-panel>
